Dark mode fixes

--- a/css/mode-switch.css
+++ b/css/mode-switch.css
@@ -27,3 +27,14 @@ img.dark-main-colour  {
 .dark-mode {
     background-color: #232323;
 }
+
+.blinking{
+    animation:blinkingText 2.0s infinite;
+}
+@keyframes blinkingText{
+    0%{color: var(--mc);}
+    49%{color: transparent;}
+    50%{color: transparent;}
+    69%{color: transparent;}
+    100%{color: var(--mc);}
+}
